--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
     </nav>
     <p>Park City Gazette &copy; 2018 All Rights Reserved</p>
   </footer>
+  <script src="pc_cword.js" async></script>
 </body>
 
 </html>
